# slm-pricer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: _ed-donner_attention_epoch__LoRA_R32_old.json  ed-donner-antonawinkler.json
notebooks/: 01_training.ipynb  02_model_analysis.ipynb
scripts/: create_ensemble.py  model_data_loader.py  visualize_models.py
